# container_app_template

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh  run.sh
.devcontainer/: devcontainer.json
doc/: README.md
scripts/: entrypoint.py  entrypoint.sh
src/: README.md  app.cpp  script.py
src/composition/launch/: composition_demo.launch.py
